--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Release
 
-on: [push]
+on:
+  push:
+    paths:
+      - "action.yml"
 
 jobs:
   release:
@@ -8,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          depth: 0 # <- Suggested to get all tags
+          fetch-depth: 0 # <- Suggested to get all tags
           token: ${{ secrets.GH_TOKEN }} # <- This is required
 
       - name: Release
