--- a/action.yml
+++ b/action.yml
@@ -54,7 +54,7 @@ runs:
           echo "Downloading trunk..."
           if [ "${{ inputs.version }}" = "latest" ]; then
             echo "Fetching latest trunk release..."
-            export LATEST_TAG="$(curl https://api.github.com/repositories/288799056/releases/latest -s | jq .name -r | xargs)"
+            export LATEST_TAG="$(curl https://api.github.com/repositories/288799056/releases/latest -s | jq .tab_name -r | xargs)"
             TRUNK_URL="https://github.com/trunk-rs/trunk/releases/download/v${LATEST_TAG}/trunk-x86_64-unknown-linux-gnu.tar.gz"
           else
             TRUNK_URL="https://github.com/thedodd/trunk/releases/download/${{ inputs.version }}/trunk-x86_64-unknown-linux-gnu.tar.gz"
